--- a/index.html
+++ b/index.html
@@ -1,197 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Module 3</title>
-	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=cyrillic" rel="stylesheet">
+	<meta charset="utf-8">
+	<title>Верстка макета Agency</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&display=swap&subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
-<!-- Меню  --> 
-	<div class="color-first-page">
-	<header class="header">
-		<ul class="menu">
-			<li><a href="">Home</a></li>
-			<li><a href="#Portfolio.html">Portfolio</a></li>
-			<li><a href="#About-us.html">About us</a></li>
-			<li><a href="#Contact.html">Contact</a></li>
-		</ul>
-	</header>
+<!-- Этот макет сверстан по БЭМу. Подробности: https://ru.bem.info/methodology/quick-start/ -->
+<body class="page">
+	<div class="page__header page__header_grey">
+		<header class="header">
+			<ul class="menu header__menu">
+				<li class="menu__item">
+					<a class="menu__link" href="">Home</a>
+				</li>
+				<li class="menu__item">
+					<a class="menu__link" href="#portfolio">Portfolio</a>
+				</li>
+				<li class="menu__item">
+					<a class="menu__link" href="#about">About Us</a>
+				</li>
+				<li class="menu__item">
+					<a class="menu__link" href="#contacts">Contact</a>
+				</li>
+			</ul>
+		</header>
 	</div>
-<main>
-<!-- Первая страница --> 
-	<div class="color-first-page">
-		<div class="box">
-			<div class="page-1">
-				<h1 class="text-page-1">Our strong<br>Organisation</h1>
-					<p class="text-page-1-1">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sedorem ipsum dolor sit amet, consectetur adipis cing elit, sed</p>	
-						<a class="button-contact-us" href="#Contact-Us">Contact Us</a>
-			</div>
-				<div class="video-page-1">
-					<img src="images/img1.jpg" width="551" height="356" alt="video">
+	<main class="page__content">
+		<div class="page__intro page__intro_grey">
+			<section class="intro section">
+				<div class="intro__content">
+					<h1 class="intro__heading">Our strong<br> 
+						<span class="intro__heading_style">organisation</span>
+					</h1>
+					<p class="intro__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt  ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt.</p>
+					<a class="action-button action-button_red" href="">Contact Us</a>
 				</div>
+				<a class="intro__image-link" href="">
+					<img class="intro__image" src="images/office.jpeg" alt="Фото офиса" width="551" height="356">
+				</a>
+			</section>
 		</div>
-	</div>
-<!-- Вторая страница DO YOU KNOW WE CAN PROVIDE FOR YOU --> 
-	<div class="box page-2">
-		<div class="left-column-page-2">
-			<h2>Do you know we can<br>provide for you ?</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
-				<div class="button-learn-more">
-				<a href="#button-learn-more">Learn More</a>
-				</div>
-		</div>
-	<div class="rihgt-column-page-2">
-		
-			<div class="service">
-				<h3 class="management">Management</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+		<section class="services section">
+			<div class="services__lead">
+				<h2 class="services__heading section-heading" id="portfolio">Do you know we can<br> provide for you ?</h2>
+				<p class="services__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.Lorem ni ipsum dolor sit amet, consectetur adipis cing elit, ed doi eiusmod tempor incididunt ut labore et.</p>
+				<a class="action-button action-button_white" href="">Learn More</a>
 			</div>
-
-			<div class="service">
-			<h3 class="design">UI/UX Design</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+			<div class="services__blocks">
+				<section class="service">
+					<h3 class="service__heading service__heading_manage">Management</h3>
+					<p class="service__text">Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
+				</section>
+				<section class="service">
+					<h3 class="service__heading service__heading_ux">UI /UX Design</h3>
+					<p class="service__text">Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
+				</section>
+				<section class="service">
+					<h3 class="service__heading service__heading_brand">Logo / Branding</h3>
+					<p class="service__text">Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
+				</section>
+				<section class="service">
+					<h3 class="service__heading service__heading_anim">Animation</h3>
+					<p class="service__text">Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
+				</section>
 			</div>
-		
-	
-		
-			<div class="service">
-				<h3 class="logo-branding">Logo / Branding</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+		</section>
+		<section class="feature section">
+			<div class="feature__header">
+				<h2 class="feature__heading section-heading">Feature products</h2>
+				<p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit,sed do eiusmod tempor incididunt ut labore et.</p>
+				<hr class="header__line feature__line">
 			</div>
-
-			<div class="service">
-			<h3 class="animation">Animation</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+			<ul class="products__filter">
+				<li class="products__item">
+					<a class="products__link products__link_active" href="">All</a>
+				</li>
+				<li class="products__item">
+					<a class="products__link" href="">Print template</a>
+				</li>
+				<li class="products__item">
+					<a class="products__link" href="">Web template</a>
+				</li>
+				<li class="products__item">
+					<a class="products__link" href="">User interface</a>
+				</li>
+				<li class="products__item">
+					<a class="products__link" href="">Mock-up</a>
+				</li>
+			</ul>
+			<div class="products">
+				<img class="product" src="images/work-1.jpg" alt="Скриншот макета">
+				<img class="product" src="images/work-2.jpg" alt="Скриншот макета">
+				<img class="product" src="images/work-3.jpg" alt="Скриншот макета">
+				<img class="product" src="images/work-4.jpg" alt="Скриншот макета">
+				<img class="product" src="images/work-5.jpg" alt="Скриншот макета">
+				<img class="product" src="images/work-6.jpg" alt="Скриншот интерфейса">
+				<img class="product" src="images/work-7.jpg" alt="Скриншот интерфейса">
+				<img class="product" src="images/work-8.jpg" alt="Скриншот интерфейса">
 			</div>
-		
-	</div>
-	</div>
-<!-- Третья страница FEATURE PRODUCTS -->
-	<hr class="grey-line">	
-			<div class="box page-3">
-				<div class="header-page-3">
-					<h2>Feature products</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor<br>incididunt ut labore et</p>
-					<hr class="red-line">
-				</div>
-				<div class="galery-menu">
-					<a href="">All</a>
-					<a href="">Print Template</a>
-					<a href="">Web Template</a>
-					<a href="">User Interface</a>
-					<a href="">Mock-up</a>
-				</div>
-				<div class="box galery-photo">
-				<div class="galery-photo-page-3"><img src="images/pic.png"></div>
-				<div class="galery-photo-page-3"><img src="images/pic.png"></div>
-				<div class="galery-photo-page-3"><img src="images/pic.png"></div>
-				<div class="galery-photo-page-3"><img src="images/pic.png"></div>
-				<div class="galery-photo-page-3"><img src="images/pic.png"></div>
-				<div class="galery-photo-page-3"><img src="images/pic.png"></div>
-				<div class="galery-photo-page-3"><img src="images/pic.png"></div>
-				<div class="galery-photo-page-3"><img src="images/pic.png"></div>
-				</div>
+		</section>
+		<section class="team section">
+			<div class="team__header">
+				<h2 class="team__heading section-heading" id="about">Meet our team</h2>
+				<p class="team__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed dooing eiusmod tempor incididut labore Ui / Ux , print template.</p>
+				<hr class="header__line team__line">
 			</div>
-<!--Четвертая страница Meet our team -->		
-	<div class="box page-4">
-		<div class="header-page-4">
-			<h1 class="text-page-4-1">meet our team</h1>
-				<p class="text-page-4-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ut labore et.sed do eiusmod incididunt ut labore et</p>	
-				<hr class="red-line">
-		</div>
-		<div class="main-page-4">
-			<img src="images/pic4big.png" width="321" height="458" alt="Фото сотрудника">
-				<div class="mini-header-page-4">
-					<div class="text-mini-header-page-4">
-						<h2 class="text-page-4-2">Mark waugh</h2>
-						<p class="text-page-4-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</p>
-						<div class="box-for-a">
-							<a href="#facebook">Facebook</a>
-							<a href="#dribble">Dribble</a>
-							<a href="#behance">Behance</a>
-							<a href="#twitter">Twitter</a>
+			<div class="team__members">
+				<!-- В этой версии секция про команду сверстана на гридах. -->
+				<img class="team__selected-photo" src="images/man.svg" alt="Фото сотрудника">
+				<div class="team__main-content">
+					<div class="team__selected-info">
+						<span class="team__selected-name">Mark waugh</span>
+						<p class="team__selected-about">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed dooing eiusmod tempor incididut labore Ui / Ux , print template.</p>
+						<div class="team__selected-links">
+							<a class="team__selected-link" href="">Facebook</a>
+							<a class="team__selected-link" href="">Dribble</a>
+							<a class="team__selected-link" href="">Behance</a>
+							<a class="team__selected-link" href="">Twiter</a>
 						</div>
 					</div>
-					<div class="photo-mini-header-page-4">
-							<div class="galery-photo-page-4">
-							<h2 class="fio-team">Lex Silver</h2>
-							<img src="images/pic4small.png" width="197" height="214" alt="Фото сотрудника"></div>
-							<div class="galery-photo-page-4">
-							<h2 class="fio-team">Lex Silver</h2>
-							<img src="images/pic4small.png" width="197" height="214" alt="Фото сотрудника"></div>
-							<div class="galery-photo-page-4">
-							<h2 class="fio-team">Lex Silver</h2>
-							<img src="images/pic4small.png" width="197" height="214" alt="Фото сотрудника"></div>
-							<div class="galery-photo-page-4">
-							<h2 class="fio-team">Lex Silver</h2>
-							<img src="images/pic4small.png" width="197" height="214" alt="Фото сотрудника"></div>	
-					</div>
+					<section class="members">
+						<div class="member">
+							<h3 class="member__name">sokina jue</h3>
+							<img class="member__photo" src="images/girl.svg" alt="Фото сотрудника">
+						</div>
+						<div class="member">
+							<h3 class="member__name">sokina jue</h3>
+							<img class="member__photo" src="images/girl.svg" alt="Фото сотрудника">
+						</div>
+						<div class="member">
+							<h3 class="member__name">sokina jue</h3>
+							<img class="member__photo" src="images/girl.svg" alt="Фото сотрудника">
+						</div>
+						<div class="member">
+							<h3 class="member__name">sokina jue</h3>
+							<img class="member__photo" src="images/girl.svg" alt="Фото сотрудника">
+						</div>
+					</section>
 				</div>
-		</div>	
-	</div>
-<!--Пятая страница Подписаться. subscribe  -->
-	<div class="form-send">
-	    		<h3 class="design-tips">Design tips, tricks, and freebies. Delivered weekly.</h3>
-	    		<p class="lorems">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.</p>
-	    	<form action="https:/google.com/search" method="get">
-	    		
-	    		<input class="email-adress" type="search" name="q" id="q" placeholder="Email Address...">
-	    		<button class="subscribe" type="submit">subscribe</button>
-	    	</form>
-	    </div>
-<!--Шестая страница. Связаться с нами. Get in touch  -->
-	<div class="feedback-contacts">
-		<div class="feedback__left-box"></div>	
-		<section class="feedback">
-			<section class="feedback__header">
-				<h1 class="feedback__heading" id="contacts">Get in touch</h1>
-				<p class="feedback__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.ur adipis cing elit, sed do eiusmod tempor incididunt ut labore et. ur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.</p>
-				<hr class="header__line feedback__line">
-			</section>
-			<section class="feedback__body">
-				<div class="feedback__form">
-					<div class="feedback__input feedback__name">Name</div>
-					<div class="feedback__input feedback__mail">Your Mail</div>
-					<div class="feedback__input feedback__message">Type your message</div>
-					<a class="feedback__button">Send message</a>
-				</div>
-			</section>
-		</section>
-		<section class="contacts">
-			<h2 class="contacts__heading">Contact info</h2>
-			<address class="contacts__address">
-				<p class="contacts__line">Jalalabad 24 / A, Ambaarkhana, Sylhet, Bangladesh<br></p>
-				<p class="contacts__line">redwan@deviserweb.com<br></p>
-				<p class="contacts__line">(+88) 017 617 46373<br></p>
-			</address>
-		</section>
-		<div class="feedback__right-box contacts__decor"></div>
-	</div>
-</main>
-<footer class="footer">
-	<div class="footer-box">
-		<div class="text-footer"><p>&#169; Copyright @Lex Silver 2021, All rights reserved.</p>
-		</div>
-			<div class="icon-footer">
-				<a href="#twitter">
-				<img src="images/twitter-icon.png" alt="twitter-icon"></a>
-
-				<a href="#linkedin">
-				<img src="images/linkedin-icon.png" alt="linkedIn-icon"></a>
-
-				<a href="#google">
-				<img src="images/google-icon.png" alt="google-icon"></a>
-
-				<a href="#facebook">
-				<img src="images/facebook-icon.png" alt="facebook-icon"></a>
 			</div>
-	</div>		
-</footer>
-
-
-
-
-
-
+		</section>
+		<section class="subscribe section">
+			<div class="subscribe__header">
+				<h2 class="subscribe__heading section-heading">Design tips, tricks, and freebies. Delivered weekly.</h2>
+				<p class="subscribe__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed d</p>
+			</div>
+			<form class="subscribe__form" action="" method="GET">
+				<input class="subscribe__input" type="email" name="email" placeholder="Email Address..." required>
+				<button class="subscribe__button" type="submit">Subscribe</button>
+			</form>
+		</section>
+		<div class="feedback-contacts">
+			<div class="feedback__left-box"></div>	
+			<section class="feedback">
+				<div class="feedback__header">
+					<h2 class="feedback__heading section-heading" id="contacts">Get in touch</h2>
+					<p class="feedback__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.ur adipis cing elit, sed do eiusmod tempor incididunt ut labore et. ur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+					<hr class="header__line feedback__line">
+				</div>
+				<section class="feedback__body section">
+					<form class="feedback__form" action="" method="GET">
+						<input class="feedback__input feedback__name" type="text" name="name" placeholder="Name" required>
+						<input class="feedback__input feedback__mail" type="email" name="email" placeholder="Your Mail" required>
+						<textarea class="feedback__input feedback__message" name="message" cols="30" rows="5" placeholder="Type your message" required></textarea>
+						<button class="feedback__button" type="submit">Send message</button>
+					</form>
+				</section>
+			</section>
+			<section class="contacts">
+				<h2 class="contacts__heading section-heading">Contact info</h2>
+				<address class="contacts__address">
+					<p class="contacts__line">Jalalabad 24 / A, Ambaarkhana, Sylhet, Bangladesh<br></p>
+					<p class="contacts__line">redwan@deviserweb.com<br></p>
+					<p class="contacts__line">(+88) 017 617 46373<br></p>
+				</address>
+			</section>
+			<div class="feedback__right-box contacts__decor"></div>
+		</div>
+	</main>
+	<footer class="footer">
+		<div class="footer__content section">
+			<p class="footer__copyright">&copy; Copyright @Junaed 2016, All rights reserved.</p>
+			<div class="footer__social-links">
+				<a class="footer__link" href="">
+					<img src="images/Twitter_Rounded_Solid.png" alt="Лого">
+				</a>
+				<a class="footer__link" href="">
+					<img src="images/LinkedIn_Rounded_Solid.png" alt="Лого">
+				</a>
+				<a class="footer__link" href="">
+					<img src="images/Google_Rounded_Solid.png" alt="Лого">
+				</a>
+				<a class="footer__link" href="">
+					<img src="images/Facebook_Rounded_Solid.png" alt="Лого">
+				</a>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
